--- a/finalProject/css/navstyle.css
+++ b/finalProject/css/navstyle.css
@@ -7,19 +7,104 @@ header {
 	padding: 2em;
 }
 
-nav ul	{
-	display: flex;
-	justify-content: space-between;
-	padding: 0;
-	width: 70%;
-	margin: 0 auto 5em;
+nav ul {
+	text-align: center;
+	margin-top: 2em;
 }
+
 
 nav li {
 	list-style: none;
 	font-size: 1.5rem;
+	margin-bottom: 0.75em;
 }
+
 nav a {
 	text-decoration: none;
 	color: black;
 }
+
+
+.active {
+	text-decoration: underline;
+}
+.active a {
+	color: gray;
+}
+.navbar {
+	display: none;
+}
+.nav-toggle {
+	display: none;
+}
+
+.nav-toggle-label {
+	width: 100%;
+	height: 4em;
+	padding-top: 1.7em;
+	background: rgba(37, 77, 116, 0.7);
+	margin-bottom: 1em;
+}
+
+.nav-toggle-label span,
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+	display: block;
+	background: gray;
+	height: 8px;
+	width: 3em;
+	border-radius: 5px;
+	position: relative;
+}
+
+.nav-toggle-label span {
+	margin-bottom: 1em;
+}
+
+.nav-toggle-label span::before,
+.nav-toggle-label span::after {
+	content: "";
+	position: absolute;
+}
+
+.nav-toggle-label span::before {
+	bottom: 15px;
+}
+.nav-toggle-label span::after{
+	top: 15px;
+}
+
+.nav-toggle:checked ~ nav {
+	display: block;
+}
+
+@media only screen and (min-width: 600px ) {
+
+	.nav-toggle-label {
+		display: none;
+	}
+	.navbar {
+		display: block;
+	}
+
+	nav ul	{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 0;
+	width: 70%;
+	margin: 0 auto 5em;
+ 	}
+
+ 	nav a:hover,
+	nav a:focus {
+	background: lightgray;
+	padding: 0.25em 0.5em;
+	}
+
+}
+
+
+
+
+
