--- a/finalProject/css/navstyle.css
+++ b/finalProject/css/navstyle.css
@@ -24,6 +24,17 @@ nav a {
 	color: black;
 }
 
+label {
+	font-size: 1.25em;
+	
+}
+.bar {
+	width: 2.5em;
+	height: 5px;
+	background-color: gray;
+	margin: 5px 0;
+}
+
 
 .active {
 	text-decoration: underline;
@@ -36,42 +47,6 @@ nav a {
 }
 .nav-toggle {
 	display: none;
-}
-
-.nav-toggle-label {
-	width: 100%;
-	height: 4em;
-	padding-top: 1.7em;
-	background: rgba(37, 77, 116, 0.7);
-	margin-bottom: 1em;
-}
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-	display: block;
-	background: gray;
-	height: 8px;
-	width: 3em;
-	border-radius: 5px;
-	position: relative;
-}
-
-.nav-toggle-label span {
-	margin-bottom: 1em;
-}
-
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-	content: "";
-	position: absolute;
-}
-
-.nav-toggle-label span::before {
-	bottom: 15px;
-}
-.nav-toggle-label span::after{
-	top: 15px;
 }
 
 .nav-toggle:checked ~ nav {
