--- a/finalProject/css/navstyle.css
+++ b/finalProject/css/navstyle.css
@@ -1,7 +1,9 @@
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
+
 
 header {
 	padding: 2em;
@@ -9,13 +11,13 @@ header {
 
 nav ul {
 	text-align: center;
-	margin-top: 2em;
+	margin-top: 1em;
 }
 
 
 nav li {
 	list-style: none;
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 	margin-bottom: 0.75em;
 }
 
@@ -25,16 +27,16 @@ nav a {
 }
 
 label {
-	font-size: 1.25em;
+	font-size: 1.25rem;
 	
 }
+
 .bar {
 	width: 2.5em;
 	height: 5px;
 	background-color: gray;
 	margin: 5px 0;
 }
-
 
 .active {
 	text-decoration: underline;
@@ -69,6 +71,9 @@ label {
 	padding: 0;
 	width: 70%;
 	margin: 0 auto 5em;
+ 	}
+ 	nav li {
+ 		font-size: 1.5rem;
  	}
 
  	nav a:hover,
