--- a/finalProject/css/problemstyle.css
+++ b/finalProject/css/problemstyle.css
@@ -1,3 +1,9 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 article {
 	width: 80%;
 	margin: 0 auto;
@@ -6,4 +12,96 @@ article {
 img	{
 	width: 30%;
 	height: 200px;
+}
+
+h1 {
+	text-align: center;
+	margin-bottom: 1em;
+}
+
+p {
+	margin-bottom: 1em;
+}
+
+.image-container {
+	margin-bottom: 1em;
+	width: 100%;
+	height: 0;
+	padding-bottom: 50%;
+	
+	position: relative;
+}
+
+.slides {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.slides img {
+	width: 100%;
+	height: 100%;
+}
+
+#img1, #img2, #img3 {
+	display: none;
+}
+
+.previous, .next {
+	font-size: 2rem;
+	color: black;
+	opacity: .5;
+	font-weight: bolder;
+	position: absolute;
+	z-index: 99;
+	cursor: pointer;
+}
+
+.previous {
+	top: 45%;
+	left: 2.5%;
+}
+
+.next {
+	top: 45%;
+	right: 2.5%;
+}
+.previous:hover,
+.previous:focus,
+.next:hover,
+.next:focus {
+	font-size: 2.5rem;
+	background: lightgray;
+	padding: 5px;
+	border-radius: 10%;
+}
+
+
+.dots-box {
+	width: 100%;
+	height: 10px;
+	bottom: 10%;
+	position: absolute;
+	text-align: center;
+	z-index: 99;
+}
+
+.dot {
+	color: black;
+}
+
+.slides {
+	z-index: 1;
+}
+
+#img1:checked ~ #first,
+#img2:checked ~ #second,
+#img3:checked ~ #third {
+	z-index: 9;
+}
+
+#img1:checked ~ .dots-box #dot1,
+#img2:checked ~ .dots-box #dot2,
+#img3:checked ~ .dots-box #dot3 {
+	color: gray;
 }
