--- a/finalProject/css/problemstyle.css
+++ b/finalProject/css/problemstyle.css
@@ -7,6 +7,7 @@
 article {
 	width: 80%;
 	margin: 0 auto;
+	line-height: 2em;
 }
 
 img	{
@@ -28,7 +29,6 @@ p {
 	width: 100%;
 	height: 0;
 	padding-bottom: 50%;
-	
 	position: relative;
 }
 
@@ -105,3 +105,16 @@ p {
 #img3:checked ~ .dots-box #dot3 {
 	color: gray;
 }
+
+@media only screen and (min-width: 600px ) {
+	.image-container {
+		margin-bottom: 1em;
+		width: 80%;
+		max-width: 460px; 
+		padding-bottom: 260px;
+		margin: 2em auto;
+		position: relative;
+	}
+	
+}
+
