--- a/finalProject/css/homestyle.css
+++ b/finalProject/css/homestyle.css
@@ -4,11 +4,6 @@
 	box-sizing: border-box;
 }
 
-img	{
-	width: 30%;
-	height: 200px;
-}
-
 .home-text {
 	width: 80%;
 	margin: 0 auto;
@@ -22,6 +17,79 @@ img	{
 }
 
 .slideshow-box	{
-	width: 70%;
+	width: 40%;
+	height: 300px;
 	margin: 0 auto;
+	position: relative;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+}
+
+
+.first, .second, .third{
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.first {
+	animation: fade1 10s infinite;
+}
+
+.second {
+	animation: fade2 10s infinite;
+}
+.third {
+	animation: fade3 10s infinite;
+}
+
+@keyframes fade1 {
+	0% {
+		opacity: 1;
+	}
+	33% {
+		opacity: 0;
+	}
+	66% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+	
+}
+
+@keyframes fade2 {
+	0% {
+		opacity: 0;
+	}
+	33% {
+		opacity: 1;
+	}
+	66% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+	
+}
+@keyframes fade3 {
+	0% {
+		opacity: 0;
+	}
+	33% {
+		opacity: 0;
+	}
+	66% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+	
 }
