--- a/finalProject/css/homestyle.css
+++ b/finalProject/css/homestyle.css
@@ -8,7 +8,7 @@
 	width: 80%;
 	margin: 0 auto;
 	text-align: center;
-	margin-bottom: 5em;
+	margin-bottom: 2.5em;
 	line-height: 2em;
 }
 
@@ -17,9 +17,12 @@
 }
 
 .slideshow-box	{
-	width: 40%;
-	height: 300px;
-	margin: 0 auto;
+	width: 70%;
+	max-width: 500px;
+	min-height: 200px;
+	max-height: 400px;
+	margin: 0 auto 5em;
+	padding: 1em;
 	position: relative;
 }
 
